--- a/src/components/Sidebar_btn/Sidebar_btn.scss
+++ b/src/components/Sidebar_btn/Sidebar_btn.scss
@@ -18,8 +18,6 @@
         align-items: center;
         border-radius: 5px;
         margin-left: 17px;
-        // margin-top: 5px;
-        // margin-bottom: 5px;
         
         p{
             width: 160px;
@@ -101,7 +99,7 @@
 }
 
 .dropdown_margin{
-    margin-top: -10px;
+    // margin-top: -10px;
 }
 .dropdown_item_container{
     max-height: 0;
@@ -196,8 +194,10 @@ a{
 }
 .open_dropdown{
     // height: auto;
+    // padding-top: 10px;
     max-height: 600px;
     transition: max-height .4s ease-in;
+    
 
 }
 
