searchbar color change

--- a/src/components/SearchBar/SearchBar.scss
+++ b/src/components/SearchBar/SearchBar.scss
@@ -13,7 +13,7 @@
     height: 62px;
     margin: auto;
     position: relative;
-    background-color: #f5f5f9;
+    background-color: #ffff;
     display: flex;
     align-items: center;
     border-radius: 8px;
@@ -26,7 +26,7 @@
         input{
             width: 93%;
             outline: none;
-            background-color: #f5f5f9;
+            background-color: #ffff;
             border: none;
             padding: 0px 10px;
             margin: auto;
@@ -55,7 +55,7 @@
     height: 62px;
     margin: auto;
     position: relative;
-    background-color: #f5f5f9;
+    background-color: #ffff;
     display: flex;
     align-items: center;
     border-radius: 8px;
